--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^20.8.4"
+    "@types/node": "^20.8.4",
+    "tslib": "^2.6.2"
   },
   "keywords": [],
   "author": "",
